fixed white spacing on upload and gallery page

--- a/src/App.scss
+++ b/src/App.scss
@@ -139,7 +139,7 @@ body {
 }
 
 .home-p1 {
-  font-size: 20px;
+  font-size: 17px;
   max-width: 390px;
   min-width: 390px;
   margin: 150px 150px 0 0;
