--- a/src/NewGallery/css/title.scss
+++ b/src/NewGallery/css/title.scss
@@ -1,3 +1,9 @@
+.title {
+  background-color: #171c27;
+  height: 100%;
+  padding: 100px 0 100px 0;
+}
+
 .title-h2 {
   position: relative;
   text-align: center;
